docs: fix Mermaid diagram syntax and rewrite README with developer setup guide